feat: add more S3 bucket operations to S3service and controller side